add purpose on manifest

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
       {
         "src": "https://www.gravatar.com/avatar/509d3b6019d078eb39f42d51e7024abc?s=512",
         "sizes": "512x512",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any maskable"
       }
     ]
   }
